--- a/webserver/default.config
+++ b/webserver/default.config
@@ -1,17 +1,17 @@
 server {
-	listen       80 
-	server_name  hello.com 
+	listen   80 
+	server_name hello.com www.hello.com
 	Client_body_size  3M 
 
 	location  /upload {
 	root html 
-    allowed_method Get post
+    allowed_method GET POST
 	index_auto off
     }
 
 	location  /50x.html {
 	root html;
-	allowed_method Get
+	allowed_method GET
 	index_auto off
 	}
 
@@ -20,62 +20,5 @@ server {
 		allowed_method  GET POST
 		index_auto off
 		index favicon.ico
-	}
-}
-
-
-server {
-	listen       10000
-	server_name  jhwang2.com
-    
-	
-    location /abc.html {
-		root  /serve/html
-		allowed_method  GET
-		index_auto off
-		index jhwang2.html index.html index.cpp
-	}
-
-	location /favicon.ico {
-		root  /serve/html
-		allowed_method  GET POST
-		index_auto off
-		index favicon.ico
-	}
-
-	location /error {
-		root  /serve/error
-	}
-
-	location /.cpp {
-		root  /serve/script
-	}
-}
-
-server {
-	listen       10000
-	server_name  jhwang2.com
-    
-	
-    location /a.cpp {
-		root  /serve/html
-		allowed_method  GET
-		index_auto off
-		index jhwang2.html index.html index.cpp
-	}
-
-	location /favicon.ico {
-		root  /serve/html
-		allowed_method  GET POST
-		index_auto off
-		index favicon.ico
-	}
-
-	location     /error {
-		root  /serve/error
-	}
-
-	location /.cpp {
-		root  /serve/script
 	}
 }
