--- a/serve/conf/default.conf
+++ b/serve/conf/default.conf
@@ -30,3 +30,70 @@ server {
 		root			html
 	}
 }
+
+server {
+	listen     			8080
+	server_name			wonie.com
+	client_max_body		10M
+
+	file50x				html/donghong/50x.html
+
+
+	location /  {
+		root			html/donghong/
+		allowed_method	GET POST DELETE
+
+		index			index.html
+    }
+
+	location /cgi-bin {
+		root			html/donghong/bin
+		allowed_method	GET POST
+
+		cgi				on
+		upload			html/donghong/storage
+		index_auto		on
+	}
+
+	location /bin {
+		rewrite			/cgi-bin
+	}
+
+	location .ico {
+		root			html
+	}
+}
+
+
+server {
+	listen     			9090
+	server_name			wonie.com
+	client_max_body		10M
+
+	file50x				html/donghong/50x.html
+
+
+	location /  {
+		root			html/donghong/
+		allowed_method	GET POST DELETE
+
+		index			index.html
+    }
+
+	location /cgi-bin {
+		root			html/donghong/bin
+		allowed_method	GET POST
+
+		cgi				on
+		upload			html/donghong/storage
+		index_auto		on
+	}
+
+	location /bin {
+		rewrite			/cgi-bin
+	}
+
+	location .ico {
+		root			html
+	}
+}
